--- a/index.html
+++ b/index.html
@@ -14,60 +14,67 @@
                 <div class="nav-bg__blue"></div>
             </div>
             <div class="nav__content-wrapper">
-                <div class="nav__icon-container">
-                    <img class="nav__icon" src="img/ask_it_icon.png" alt="icon">
+                <div class="nav__icon-menu-wrapper">
+                    <div class="nav__empty-div"></div>
+                    <div class="nav__icon-container">
+                        <img class="nav__icon" src="img/ask_it_icon.png" alt="icon">
+                    </div>
+                    <label class="nav__toggle-label" for="nav-toggle">
+                        <img class="nav__menu-button" src="img/Menu.png" alt="Menu">
+                    </label>
                 </div>
+                <input type="checkbox" class="nav__toggle" id="nav-toggle">
                 <nav class="nav__list-container">
                     <ul class="nav__list nav-list">
-                        <li class="nav-list__element"><a class="nav-list__href" href="#header"><p class="nav-list__text">Home</p></a></li>
+                        <li class="nav-list__element"><a class="nav-list__href" href="#audience-interaction"><p class="nav-list__text">Home</p></a></li>
                         <li class="nav-list__element"><a class="nav-list__href" href="#how-it-works"><p class="nav-list__text">How it works</p></a></li>
                         <li class="nav-list__element"><a class="nav-list__href" href="#features"><p class="nav-list__text">Features</p></a></li>
                         <li class="nav-list__element"><a class="nav-list__href" href="#partners"><p class="nav-list__text">Partners</p></a></li>
                         <li class="nav-list__element"><a class="nav-list__href" href="#events"><p class="nav-list__text">Events</p></a></li>
                         <li class="nav-list__element"><a class="nav-list__href" href="#about-us"><p class="nav-list__text">About us</p></a></li>
                     </ul>
+                    <ul class="nav__log-reg log-reg">
+                        <li class="log-reg__icon-text-container">
+                            <img class="log-reg__icon" src="img/sign-in.png" alt="icon">
+                            <p class="log-reg__text">Log in</p>
+                        </li>
+                        <li class="log-reg__icon-text-container">
+                            <img class="log-reg__icon" src="img/avatar.png" alt="icon">
+                            <p class="log-reg__text">Register</p>
+                        </li>
+                    </ul>
                 </nav>
-                <ul class="nav__log-reg log-reg">
-                    <li class="log-reg__icon-text-container">
-                        <img class="log-reg__icon" src="img/sign-in.png" alt="icon">
-                        <p class="log-reg__text">Log in</p>
-                    </li>
-                    <li class="log-reg__icon-text-container">
-                        <img class="log-reg__icon" src="img/avatar.png" alt="icon">
-                        <p class="log-reg__text">Register</p>
-                    </li>
-                </ul>
             </div>
         </div>
     </header>
     <main>
-        <div id="header" class="header">
-            <div class="header__wrapper">
-                <div class="header__content-wrapper">
-                    <div class="header__text">
-                        <div class="header__titles-container">
-                            <div class="header__titles-lines-container">
-                                <h1 class="header__title">Live Interaction From Audience</h1>
-                                <div class="header__lines-container">
-                                    <div class="header__lines header-lines">
-                                        <div class="header-lines__first-line white-line"></div>
-                                        <div class="header-lines__second-line white-line"></div>
-                                        <div class="header-lines__third-line white-line"></div>
+        <div id="audience-interaction" class="audience-interaction">
+            <div class="audience-interaction__wrapper">
+                <div class="audience-interaction__content-wrapper">
+                    <div class="audience-interaction__text">
+                        <div class="audience-interaction__titles-container">
+                            <div class="audience-interaction__titles-lines-container">
+                                <h1 class="audience-interaction__title">Live Interaction From Audience</h1>
+                                <div class="audience-interaction__lines-container">
+                                    <div class="audience-interaction__lines audience-interaction-lines">
+                                        <div class="audience-interaction-lines__first-line white-line"></div>
+                                        <div class="audience-interaction-lines__second-line white-line"></div>
+                                        <div class="audience-interaction-lines__third-line white-line"></div>
                                     </div>
                                 </div>
                             </div>
-                            <h3 class="header__subtitle">Q&A, Polls and Slide-sharing for Events</h3>
+                            <h3 class="audience-interaction__subtitle">Q&A, Polls and Slide-sharing for Events</h3>
                         </div>
-                        <div class="header__buttons header-buttons">
-                            <button class="header-buttons__create-event-button transparent-button header-button">Create a event</button>
-                            <div class="header__other-buttons header-other-buttons">
-                                <button class="header-other-buttons__join-event-button transparent-button header-button">Join event</button>
-                                <button class="header-other-buttons__type-code-button white-button header-button">type code</button>
+                        <div class="audience-interaction__buttons audience-interaction-buttons">
+                            <button class="audience-interaction-buttons__create-event-button transparent-button audience-interaction-button">Create a event</button>
+                            <div class="audience-interaction__other-buttons audience-interaction-other-buttons">
+                                <button class="audience-interaction-other-buttons__join-event-button transparent-button audience-interaction-button">Join event</button>
+                                <button class="audience-interaction-other-buttons__type-code-button white-button audience-interaction-button">type code</button>
                             </div>
                         </div>
                     </div>
-                    <div class="header__image-container">
-                        <img class="header__image" src="img/phone.png">
+                    <div class="audience-interaction__image-container">
+                        <img class="audience-interaction__image" src="img/phone.png">
                     </div>
                 </div>
             </div>
