--- a/index.html
+++ b/index.html
@@ -135,13 +135,11 @@
                     <h1 class="interaction__title">Interact with thousand of audience in no time</h1>
                     <h3 class="interaction__subtitle">Its easier than ever</h3>
                     <div class="line"></div>
-                    <p class="interaction__text">it’s never been easier to connect with people who speak this language. They
+                    <p class="interaction__text"><span class="interaction__inner-text-span">it’s never been easier to connect with people who speak this language. They
                         want others to build up their self-image and confidence, and digital connectivity
                         creates ample opportunity to tell your audience why they’re awesome. Move
                         beyond general flattery and focus on specifics. Ask yourself, “How can I make
-                        my audience feel good about themselves?”
-                    </p>
-                    <p class="interaction__text">
+                        my audience feel good about themselves?”</span>
                         One option might be developing a blog series that focuses on industry wins, or
                         spotlights companies that are doing something right. Or if you share an article
                         with your network, you could point out a quote from the author that really
