mobile events done

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
                 <div class="partners__images">
                     <div class="partners__images-container">
-                        <img class="partners__icon" src="img/back-arrow.svg" alt="">
+                        <img class="partners__arrow" src="img/back-arrow.svg" alt="">
                         <img class="partners__icon" src="img/McCANN.png" alt="">
                         <img class="partners__icon" src="img/un-women.png" alt="">
                         <img class="partners__icon" src="img/accenture.png" alt="">
@@ -263,7 +263,7 @@
                         <img class="partners__icon" src="img/eventbrite.png" alt="">
                         <img class="partners__icon" src="img/zappos.png" alt="">
                         <img class="partners__icon" src="img/siemens.png" alt="">
-                        <img class="partners__icon" src="img/forward-arrow.svg" alt="">
+                        <img class="partners__arrow" src="img/forward-arrow.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -272,7 +272,7 @@
             <div class="events__wrapper">
                 <div class="events__title-container title-container">
                     <h1 class="events__title title">Events</h1>
-                    <div class="lines left-lines">
+                    <div class="lines left-lines mobile-hidden">
                         <div class="lines__bigger-line blue-line"></div>
                         <div class="lines__smaller-line blue-line"></div>
                     </div>
@@ -284,15 +284,17 @@
                                 <p class="event__title-first">EXTERNAL</p>
                                 <h1 class="event__title-second">EVENT</h1>
                             </div>
-                            <div class="full-line green-line"></div>
+                            <div class="full-line green-line mobile-hidden"></div>
                             <div class="event__content-container">
-                                <img class="event__icon" src="img/usb-connection.png" alt="">
-                                <p class="event__text">Offers customizable
-                                    on-line registration service
-                                    for event organizers. Includes
-                                    pricing, features, and types of accounts.
-                                </p>
-                                <button class="event__button green-line">Discover</button>
+                                <div class="event__inner-content-container">
+                                    <img class="event__icon mobile-white-icon" src="img/usb-connection.png" alt="">
+                                    <p class="event__text">Offers customizable
+                                        on-line registration service
+                                        for event organizers. Includes
+                                        pricing, features, and types of accounts.
+                                    </p>
+                                </div>
+                                <button class="event__button green-line green-mobile-reverse">Discover</button>
                             </div>
                         </div>
                     </div>
@@ -302,15 +304,17 @@
                                 <p class="event__title-first">INTERACTIVE</p>
                                 <h1 class="event__title-second">EVENT</h1>
                             </div>
-                            <div class="full-line red-line"></div>
+                            <div class="full-line red-line mobile-hidden"></div>
                             <div class="event__content-container">
-                                <img class="event__icon" src="img/interactivity.png" alt="">
-                                <p class="event__text">Offers customizable
-                                    on-line registration service
-                                    for event organizers. Includes
-                                    pricing, features, and types of accounts.
-                                </p>
-                                <button class="event__button red-line">Discover</button>
+                                <div class="event__inner-content-container">
+                                    <img class="event__icon mobile-white-icon" src="img/interactivity.png" alt="">
+                                    <p class="event__text">Offers customizable
+                                        on-line registration service
+                                        for event organizers. Includes
+                                        pricing, features, and types of accounts.
+                                    </p>
+                                </div>
+                                <button class="event__button red-line red-mobile-reverse">Discover</button>
                             </div>
                         </div>
                     </div>
@@ -320,15 +324,17 @@
                                 <p class="event__title-first">INTERNAL</p>
                                 <h1 class="event__title-second">EVENT</h1>
                             </div>
-                            <div class="full-line orange-line"></div>
+                            <div class="full-line orange-line mobile-hidden"></div>
                             <div class="event__content-container">
-                                <img class="event__icon" src="img/hard-disk.png" alt="">
-                                <p class="event__text">Offers customizable
-                                    on-line registration service
-                                    for event organizers. Includes
-                                    pricing, features, and types of accounts.
-                                </p>
-                                <button class="event__button orange-line">Discover</button>
+                                <div class="event__inner-content-container">
+                                    <img class="event__icon mobile-white-icon" src="img/hard-disk.png" alt="">
+                                    <p class="event__text">Offers customizable
+                                        on-line registration service
+                                        for event organizers. Includes
+                                        pricing, features, and types of accounts.
+                                    </p>
+                                </div>
+                                <button class="event__button orange-line green-mobile-reverse">Discover</button>
                             </div>
                         </div>
                     </div>
