--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </div>
         </div>
         <div id="how-it-works" class="how-it-works">
-            <div class="how-it-works__wrapper wrapper">
-                <div class="how-it-works__title-container title-container">
+            <div class="how-it-works__wrapper">
+                <div class="how-it-works__title-container">
                     <h1 class="how-it-works__title title">How it works</h1>
                     <div class="lines left-lines">
                         <div class="lines__bigger-line blue-line"></div>
@@ -134,7 +134,7 @@
                 <div class="interaction__text-container">
                     <h1 class="interaction__title">Interact with thousand of audience in no time</h1>
                     <h3 class="interaction__subtitle">Its easier than ever</h3>
-                    <div class="line"></div>
+                    <div class="interaction__line"></div>
                     <p class="interaction__text"><span class="interaction__inner-text-span">it’s never been easier to connect with people who speak this language. They
                         want others to build up their self-image and confidence, and digital connectivity
                         creates ample opportunity to tell your audience why they’re awesome. Move
@@ -147,24 +147,24 @@
                     </p>
                 </div>
                 <div class="interaction__images">
-                    <div class="first-rectangle-container rectangle-container">
-                        <img class="rounded-rectangle" src="img/ask-question-bg.png" alt="">
-                        <p class="rounded-rectangle-text">Ask a Question Right Now</p>
+                    <div class="interaction__first-rectangle-container rectangle-container">
+                        <img class="rectangle-container__rounded-rectangle" src="img/ask-question-bg.png" alt="">
+                        <p class="rectangle-container__rounded-rectangle-text">Ask a Question Right Now</p>
                     </div>
-                    <div class="second-rectangle-container rectangle-container">
-                        <img class="rounded-rectangle" src="img/choose-from-questions-bg.png" alt="">
-                        <p class="rounded-rectangle-text">Choose From Questions</p>
+                    <div class="interaction__second-rectangle-container rectangle-container">
+                        <img class="rectangle-container__rounded-rectangle" src="img/choose-from-questions-bg.png" alt="">
+                        <p class="rectangle-container__rounded-rectangle-text">Choose From Questions</p>
                     </div>
-                    <div class="third-rectangle-container rectangle-container">
-                        <img class="rounded-rectangle" src="img/select-from-top-questions-bg.png" alt="">
-                        <p class="rounded-rectangle-text">Select From Top Questions</p>
+                    <div class="interaction__third-rectangle-container rectangle-container">
+                        <img class="rectangle-container__rounded-rectangle" src="img/select-from-top-questions-bg.png" alt="">
+                        <p class="rectangle-container__rounded-rectangle-text">Select From Top Questions</p>
                     </div>
                 </div>
             </div>
         </div>
         <div id="features" class="features">
-            <div class="features__wrapper wrapper">
-                <div class="features__title-container title-container">
+            <div class="features__wrapper">
+                <div class="features__title-container">
                     <h1 class="features__title title">Features</h1>
                     <div class="lines left-lines">
                         <div class="lines__bigger-line blue-line"></div>
@@ -246,7 +246,7 @@
         </div>
         <div id="partners" class="partners">
             <div class="partners__wrapper">
-                <div class="partners__title-container title-container">
+                <div class="partners__title-container">
                     <h1 class="partners__title title">Partners</h1>
                     <div class="lines right-lines">
                         <div class="lines__bigger-line white-line"></div>
@@ -270,7 +270,7 @@
         </div>
         <div id="events" class="events">
             <div class="events__wrapper">
-                <div class="events__title-container title-container">
+                <div class="events__title-container">
                     <h1 class="events__title title">Events</h1>
                     <div class="lines left-lines mobile-hidden">
                         <div class="lines__bigger-line blue-line"></div>
@@ -342,13 +342,13 @@
             </div>
         </div>
         <div id="about-us" class="about-us">
-            <div class="about-us__wrapper wrapper">
+            <div class="about-us__wrapper">
                 <div class="about-us__logo about-us-logo interaction-logo">
-                    <div class="about-us-logo__dot interaction-logo__dot dot"></div>
-                    <div class="about-us-logo__line interaction-logo__line line"></div>
+                    <div class="about-us-logo__dot interaction-logo__dot"></div>
+                    <div class="about-us-logo__line interaction-logo__line"></div>
                     <h1 class="about-us-logo__text interaction-logo__text">Know us</h1>
                 </div>
-                <div class="about-us__title-container title-container">
+                <div class="about-us__title-container">
                     <h1 class="about-us__title title">About us</h1>
                     <div class="lines right-lines">
                         <div class="lines__bigger-line blue-line"></div>
@@ -359,12 +359,10 @@
                     <div class="about-us__text-container about-us-text">
                         <h1 class="about-us-text__title">Who we are?</h1>
                         <h3 class="about-us-text__subtitle">What we can do for you</h3>
-                        <div class="about-us-text__line line blue-line"></div>
-                        <p class="about-us-text__text">it’s never been easier to connect with people who speak this language. They
+                        <div class="about-us-text__line blue-line"></div>
+                        <p class="about-us-text__text"><span class=about-us-text__inner-text-span>it’s never been easier to connect with people who speak this language. They
                             want others to build up their self-image and confidence, and digital connectivity
-                            creates ample opportunity to tell your
-                        </p>
-                        <p class="about-us-text__text">
+                            creates ample opportunity to tell your</span>
                             One option might be developing a blog series that focuses on industry wins, or
                             spotlights companies that are doing something right. Or if you share an article
                             with your network.
@@ -404,7 +402,7 @@
         <div class="footer__wrapper">
             <div class="footer__content-wrapper">
                 <div class="footer__first-col">
-                    <img class="footer__icon" src="img/ask_it_icon.png" alt="">
+                    <img class="footer__icon" src="img/icon-without-color.png" alt="">
                     <p class="footer__text-under-icon">We are AskVote.io. We are a online
                         platform for operating events effectively.
                         We're working on a web application for facilitating anonymous
