--- a/new/index.html
+++ b/new/index.html
@@ -5,20 +5,21 @@
     <title>ask.it</title>
     <link rel="stylesheet" type="text/css" href="normalize.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <section id="interaction" class="interaction">
             <div class="content">
-                <h1 class="title">Live Interaction From Audience</h1>
-                <h3 class="description">Q&A, Polls and Slide-sharing for Events</h3>
-                <div class="buttons-container">
-                    <button class="button">Create a event</button>
+                <h1 class="interaction__title title">Live Interaction From Audience</h1>
+                <h3 class="interaction__description description">Q&A, Polls and Slide-sharing for Events</h3>
+                <div class="interaction__buttons-container buttons-container">
+                    <button class="interaction__create-button button">Create a event</button>
                     <button class="button">Join event</button>
                     <button class="button">type code</button>
                 </div>
             </div>
-            <img class="image" src="../img/phone-cut.png" alt="">
+            <img class="interaction__image image" src="../img/phone-cut.png" alt="">
         </section>
     </main>
 </body>
