--- a/new/index.html
+++ b/new/index.html
@@ -23,13 +23,15 @@
         </section>
         <section id="about-us" class="about-us">
             <header class="about-us__title-container">
-                <p class="logo">Know us</p>
-                <h1 class="header-title">About us</h1>
+                <div class="about-us__logo-container">
+                    <p class="about-us__logo logo">Know us</p>
+                </div>
+                <h1 class="about-us__header-title title title_header">About us</h1>
             </header>
             <main class="about-us__content">
                 <section class="about-us__text-container">
-                    <h1 class="title">Who we are?</h1>
-                    <h3 class="description">What we can do for you</h3>
+                    <h1 class="about-us__title title">Who we are?</h1>
+                    <h3 class="about-us__description description">What we can do for you</h3>
                     <p class="text">it’s never been easier to connect with people who speak this language.
                         They want others to build up their self-image and confidence, and
                         digital connectivity creates ample opportunity to tell your
@@ -43,7 +45,7 @@
                     <section class="circle">
                         <h2 class="circle__title">20,145</h2>
                         <p class="circle__text">audience served</p>
-                    </section>>
+                    </section>
                     <section class="circle">
                         <h2 class="circle__title">5480</h2>
                         <p class="circle__text">hours of service</p>
