--- a/new/index.html
+++ b/new/index.html
@@ -11,8 +11,8 @@
     <main>
         <section id="interaction" class="interaction">
             <div class="interaction__content">
-                <h1 class="interaction__title title">Live Interaction From Audience</h1>
-                <h3 class="interaction__description description">Q&A, Polls and Slide-sharing for Events</h3>
+                <h1 class="interaction__title title title_big-lines">Live Interaction From Audience</h1>
+                <h3 class="interaction__subtitle subtitle">Q&A, Polls and Slide-sharing for Events</h3>
                 <div class="interaction__buttons-container buttons-container">
                     <button class="interaction__create-button button">Create a event</button>
                     <button class="button">Join event</button>
@@ -22,36 +22,38 @@
             <img class="interaction__image image" src="../img/phone-cut.png" alt="">
         </section>
         <section id="about-us" class="about-us">
-            <header class="about-us__title-container">
+            <header class="about-us__title-logo-container">
                 <div class="about-us__logo-container">
                     <p class="about-us__logo logo">Know us</p>
                 </div>
-                <h1 class="about-us__header-title title title_header">About us</h1>
+                <div class="about-us__title-container">
+                    <h1 class="about-us__header-title title title_header title_small-lines">About us</h1>
+                </div>
             </header>
             <main class="about-us__content">
                 <section class="about-us__text-container">
                     <h1 class="about-us__title title">Who we are?</h1>
-                    <h3 class="about-us__description description">What we can do for you</h3>
-                    <p class="text">it’s never been easier to connect with people who speak this language.
+                    <h3 class="about-us__subtitle subtitle">What we can do for you</h3>
+                    <p class="about-us__description description">it’s never been easier to connect with people who speak this language.
                         They want others to build up their self-image and confidence, and
                         digital connectivity creates ample opportunity to tell your
                     </p>
-                    <p class="text">One option might be developing a blog series that focuses on industry wins, or
+                    <p class="about-us__description description">One option might be developing a blog series that focuses on industry wins, or
                         spotlights companies that are doing something right. Or if you share an article
                         with your network,
                     </p>
                 </section>
                 <section class="about-us__stats circles-container">
-                    <section class="circle">
-                        <h2 class="circle__title">20,145</h2>
+                    <section class="circle circle_green">
+                        <p class="circle__title">20,145</p>
                         <p class="circle__text">audience served</p>
                     </section>
-                    <section class="circle">
-                        <h2 class="circle__title">5480</h2>
+                    <section class="circle circle_red">
+                        <p class="circle__title">5480</p>
                         <p class="circle__text">hours of service</p>
                     </section>
-                    <section class="circle">
-                        <h2 class="circle__title">715</h2>
+                    <section class="circle circle_orange">
+                        <p class="circle__title">715</p>
                         <p class="circle__text">event covered</p>
                     </section>
                 </section>
