--- a/new/index.html
+++ b/new/index.html
@@ -14,7 +14,7 @@
                 <h1 class="interaction__title title title_big-lines">Live Interaction From Audience</h1>
                 <h3 class="interaction__subtitle subtitle">Q&A, Polls and Slide-sharing for Events</h3>
                 <div class="interaction__buttons-container buttons-container">
-                    <button class="interaction__create-button button">Create a event</button>
+                    <button class="buttons-container__create-button button">Create a event</button>
                     <button class="button">Join event</button>
                     <button class="button">type code</button>
                 </div>
@@ -43,7 +43,7 @@
                         with your network,
                     </p>
                 </section>
-                <section class="about-us__stats circles-container">
+                <section class="about-us__stats">
                     <section class="circle circle_green">
                         <p class="circle__title">20,145</p>
                         <p class="circle__text">audience served</p>
