added html for header

--- a/new/index.html
+++ b/new/index.html
@@ -8,6 +8,29 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="nav">
+        <img class="nav__icon" src="img/ask_it_icon.png" alt="icon">
+        <nav class="nav__list-container">
+            <ul class="nav__list nav-list">
+                <li class="nav-list__element"><a class="nav-list__href" href="#interaction">Home</a></li>
+                <li class="nav-list__element"><a class="nav-list__href" href="#how-it-works">How it works</a></li>
+                <li class="nav-list__element"><a class="nav-list__href" href="#features">Features</a></li>
+                <li class="nav-list__element"><a class="nav-list__href" href="#partners">Partners</a></li>
+                <li class="nav-list__element"><a class="nav-list__href" href="#events">Events</a></li>
+                <li class="nav-list__element"><a class="nav-list__href" href="#about-us">About us</a></li>
+            </ul>
+            <ul class="nav__log-reg log-reg">
+                <li class="log-reg__icon-text-container">
+                    <img class="log-reg__icon" src="img/sign-in.png" alt="icon">
+                    <p class="log-reg__text">Log in</p>
+                </li>
+                <li class="log-reg__icon-text-container">
+                    <img class="log-reg__icon" src="img/avatar.png" alt="icon">
+                    <p class="log-reg__text">Register</p>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section id="interaction" class="interaction">
             <div class="interaction__content">
