--- a/new/index.html
+++ b/new/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="nav">
-        <img class="nav__icon" src="img/ask_it_icon.png" alt="icon">
+        <img class="nav__icon" src="../img/ask-it-icon.png" alt="icon">
         <nav class="nav__list-container">
             <ul class="nav__list nav-list">
                 <li class="nav-list__element"><a class="nav-list__href" href="#interaction">Home</a></li>
@@ -21,12 +21,16 @@
             </ul>
             <ul class="nav__log-reg log-reg">
                 <li class="log-reg__icon-text-container">
-                    <img class="log-reg__icon" src="img/sign-in.png" alt="icon">
-                    <p class="log-reg__text">Log in</p>
+                    <a class="log-reg__href">
+                        <img class="log-reg__icon" src="../img/sign-in.png" alt="icon">
+                        <p class="log-reg__text">Log in</p>
+                    </a>
                 </li>
                 <li class="log-reg__icon-text-container">
-                    <img class="log-reg__icon" src="img/avatar.png" alt="icon">
-                    <p class="log-reg__text">Register</p>
+                    <a class="log-reg__href">
+                        <img class="log-reg__icon" src="../img/avatar.png" alt="icon">
+                        <p class="log-reg__text">Register</p>
+                    </a>
                 </li>
             </ul>
         </nav>
