added viewport to html

--- a/new/index.html
+++ b/new/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width"/>
     <title>ask.it</title>
     <link rel="stylesheet" type="text/css" href="normalize.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -71,15 +72,15 @@
                     </p>
                 </section>
                 <section class="about-us__stats">
-                    <section class="circle circle_green">
+                    <section class="circle circle_audience">
                         <p class="circle__title">20,145</p>
                         <p class="circle__text">audience served</p>
                     </section>
-                    <section class="circle circle_red">
+                    <section class="circle circle_hours">
                         <p class="circle__title">5480</p>
                         <p class="circle__text">hours of service</p>
                     </section>
-                    <section class="circle circle_orange">
+                    <section class="circle circle_event">
                         <p class="circle__title">715</p>
                         <p class="circle__text">event covered</p>
                     </section>
